@@ -1,4 +1,5 @@
 Version 0.18.3-SNAPSHOT:
+   [fix] Fixed SegmentedQueues not being cleaned up on session purge. (#833)
 
 Version 0.18.2:
    [fix] Metrics
